2006-02-27 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/Vrml97Parser.g
	(Vrml97Scanner::nextToken()): Defer setting the token type to ID
	until there are no other possibilities.

2006-02-26 Braden McDaniel  <braden@endoframe.com>

	Changed openvrml::scope's parent pointer to point to a const
	scope.

	* src/libopenvrml/openvrml/Vrml97Parser.g
	(proto): Changed impl_id creation code to use a
	boost::shared_ptr<const openvrml::scope>.
	(protoInterfaceDeclaration): Changed to take a
	boost::shared_ptr<const openvrml::scope>.
	* src/libopenvrml/openvrml/scope.cpp
	(openvrml::scope::scope(const std::string &, const
	boost::shared_ptr<const scope> &)): Changed to take a
	boost::shared_ptr<const openvrml::scope> as the parent pointer.
	(openvrml::scope::parent() const): Changed to return a
	boost::shared_ptr<const openvrml::scope> &.
	* src/libopenvrml/openvrml/scope.h
	(openvrml::scope): Changed parent_ member to be a
	boost::shared_ptr<const openvrml::scope>.

2006-02-26 Braden McDaniel  <braden@endoframe.com>

	Parse X3D IMPORT and EXPORT statements.  We don't actually do
	anything with them yet.
	From Andrew Grieve <sgrieve@users.sourceforge.net>

	* src/libopenvrml/openvrml/X3DVrmlParser.g
	(statement): Override statement production from Vrml97Parser to
	parse importStatement and exportStatement alternatives.
	(importStatement): Added production to parse IMPORT statements.
	(exportStatement): Added production to parse EXPORT statements.

2006-02-26 Braden McDaniel  <braden@endoframe.com>

	Treat colon (':') as an invalid identifier character in the X3D
	VRML format.  The X3D Classic VRML encoding specification doesn't
	list colon as an invalid character in an identifier; however, in
	light of the fact that colon is used as a terminal symbol
	following an identifier in this format, this must be an error in
	the specification.

	* src/libopenvrml/openvrml/X3DVrmlParser.g
	(X3DVrmlScanner): Override isValidIdRestChars to identify colon